--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <section id="app" />
-    <script data-main="js/react-main.js" src="bower_components/requirejs/require.js"></script>
+    <script data-main="js/require-main.js" src="bower_components/requirejs/require.js"></script>
   </body>
 </html>
